--- a/devinmajordotcom/Content/cover2.css
+++ b/devinmajordotcom/Content/cover2.css
@@ -123,42 +123,6 @@
   height: 100%;
   font-size: 1.4em;
 }
-.menu li a:hover{
-  /*border: 1px solid white;
-    border-radius: 2.5px;*/
-  color: black;
-    -webkit-transition: all 0.3s ease-in;
-    transition: all 0.3s ease-in;
-}
-.menu li.current a {
-  background: #ff5e5e;
-  color: #fff;
-}
-.menu li a.active {
-  background: black;
-  color: white;
-    opacity: 0.8;
-}
-.menu li a.active:after{
-    position:absolute;
-    left:5.8em;
-    top:0;
-    content:"";
-    border:2.5em solid transparent;
-    border-left-color:black;
-    border-width: 2.5em 1em;
-    z-index:1006;
-}
-.active .menu li a:hover:after{
-    position:absolute;
-    left:6.8em;
-    top:.2em;
-    content:"";
-    border:2.5em solid transparent;
-    border-left-color:black;
-    border-width: 2.5em 1em;
-    z-index:1006;
-}
 .menu li{
     position:relative;
 }
@@ -166,18 +130,13 @@
 .active .menu li:after{
     content: attr(data-newtitle);
     position:absolute;
-    left:5.8em;
+    left:5.7em;
     top:-.15em;
     height:5em;
     white-space: pre;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background: rgb(30,80,46); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(30,80,46,1) 0%, rgba(20,110,41,1) 50%, rgba(16,102,36,1) 51%, rgba(27,153,52,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e502e', endColorstr='#1b9934',GradientType=0 ); /* IE6-9 */
     border-radius: 5px;
     padding:2em;
     transition: all 0.3s ease-in-out;
@@ -188,10 +147,12 @@
     box-shadow: inset 10px 0px 35px 3px rgba(0,0,0,0.5);
     z-index:1004;
 }
+
 .menu li:hover:after{
     visibility:visible;
     opacity:1;
 }
+
 @media screen and (max-height: 34em){
   .menu li{
     font-size:70%;
@@ -211,7 +172,7 @@
 #sidebar.active ul li a i {
     margin-right:  0;
     display: block;
-    font-size: 1.8em;
+    font-size: 1.7em;
     margin-bottom: 5px;
 }
 
@@ -259,16 +220,6 @@ a, a:hover, a:focus {
     transition: all 0.3s;
 }
 
-#sidebar {
-    /* don't forget to add all the previously mentioned styles here too */
-    background: #000000;
-    color: #fff;
-    transition: all 0.3s;
-    min-width: 250px;
-    max-width: 250px;
-    min-height: 100vh;
-}
-
 .wrapper {
     display: flex;
     align-items:stretch;
@@ -285,26 +236,17 @@ a, a:hover, a:focus {
     text-align: center;
 }
 
-#sidebar .sidebar-header {
-    padding: 20px;
-    background: rgb(30,80,46); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(30,80,46,1) 0%, rgba(20,110,41,1) 50%, rgba(16,102,36,1) 51%, rgba(27,153,52,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e502e', endColorstr='#1b9934',GradientType=0 ); /* IE6-9 */
-}
-
 #sidebar ul.components {
     padding: 20px 0;
 }
 
 #sidebar li {
-    border-bottom: 1px solid #47748b;
+    /*border-bottom: 1px solid #47748b;*/
 }
 
-#sidebar li:first-of-type {
+/*#sidebar li:first-of-type {
     border-top: 1px solid #47748b;
-}
+}*/
 
 #sidebar ul p {
     color: #fff;
@@ -317,19 +259,7 @@ a, a:hover, a:focus {
     display: block;
     text-align:left;
 }
-#sidebar ul li a:hover {
-    color: green;
-    background: #fff;
-}
 
-#sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #fff;
-    background: rgb(30,80,46); /* Old browsers */
-    background: -moz-linear-gradient(top, rgba(30,80,46,1) 0%, rgba(20,110,41,1) 50%, rgba(16,102,36,1) 51%, rgba(27,153,52,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(30,80,46,1) 0%,rgba(20,110,41,1) 50%,rgba(16,102,36,1) 51%,rgba(27,153,52,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e502e', endColorstr='#1b9934',GradientType=0 ); /* IE6-9 */
-}
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
