--- a/devinmajordotcom/Views/MyHome/Index.cshtml
+++ b/devinmajordotcom/Views/MyHome/Index.cshtml
@@ -107,15 +107,15 @@
                         <!-- BLOG THUMB -->
                         <div class="media blog-thumb">
                             <div class="media-object media-left">
-                                <a href="blog-detail.html"><img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(post.Image))" class="img-responsive" alt=""></a>
+                                <a href="@Url.Action("BlogPost", "MyHome", new { ID = post.BlogPostID })"><img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(post.Image))" class="img-responsive" alt=""></a>
                             </div>
                             <div class="media-body blog-info">
                                 <small><i class="fa fa-clock-o"></i>@post.CreatedOn</small>
                                 <h3>
-                                    <a href="blog-detail.html">@post.PostTitle</a>
+                                    <a href="@Url.Action("BlogPost", "MyHome", new { ID = post.BlogPostID })">@post.PostTitle</a>
                                 </h3>
                                 <p>@post.Body</p>
-                                <a href="blog-detail.html" class="btn section-btn">Read article</a>
+                                <a href="@Url.Action("BlogPost", "MyHome", new { ID = post.BlogPostID })" class="btn section-btn">Read Full Post</a>
                             </div>
                         </div>
                     </div>
