--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -63,7 +63,7 @@
                         <div class="form-group">
                             <div class="checkbox-inline">
                                 <label class="switch">
-                                    @Html.EditorFor(o => o.SidebarLinks[count].IsDefault, new { @class = "trendClick" })
+                                    @Html.EditorFor(o => o.SidebarLinks[count].IsDefault, new { htmlAttributes = new { @class = "toggler" } })
                                     <div class="slider round"></div>
                                 </label>
                                 @Html.LabelFor(o => o.SidebarLinks[count].IsDefault, "Is the Default Link?", new { @style = "font-weight: normal; margin-bottom: 0px;" })
@@ -74,7 +74,7 @@
                         <div class="form-group">
                             <div class="checkbox-inline">
                                 <label class="switch">
-                                    @Html.EditorFor(o => o.SidebarLinks[count].IsPublic, new { @class = "trendClick" })
+                                    @Html.EditorFor(o => o.SidebarLinks[count].IsPublic, new { htmlAttributes = new { @class = "toggler" } })
                                     <div class="slider round"></div>
                                 </label>
                                 @Html.LabelFor(o => o.SidebarLinks[count].IsPublic, "Is Link Public?", new { @style = "font-weight: normal; margin-bottom: 0px;" })
@@ -85,7 +85,7 @@
                         <div class="form-group">
                             <div class="checkbox-inline">
                                 <label class="switch">
-                                    @Html.EditorFor(o => o.SidebarLinks[count].IsEnabled, new {@class = "trendClick"})
+                                    @Html.EditorFor(o => o.SidebarLinks[count].IsEnabled, new { htmlAttributes = new { @class = "toggler" } })
                                     <div class="slider round"></div>
                                 </label>
                                 @Html.LabelFor(o => o.SidebarLinks[count].IsEnabled, "Is Link Enabled?", new {@style = "font-weight: normal; margin-bottom: 0px;"})
