--- a/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
@@ -44,7 +44,7 @@
                 <div class="form-group">
                     <div class="checkbox-inline">
                         <label class="switch">
-                            <input class="newLinkInput check-box" data-val="true" data-val-required="The IsDefault field is required." id="SidebarLinks_{{newID}}__IsDefault" name="SidebarLinks[{{newID}}].IsDefault" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsDefault" type="hidden" value="false">
+                            <input class="newLinkInput toggler check-box" data-val="true" data-val-required="The IsDefault field is required." id="SidebarLinks_{{newID}}__IsDefault" name="SidebarLinks[{{newID}}].IsDefault" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsDefault" type="hidden" value="false">
                             <div class="slider round"></div>
                         </label>
                         <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsDefault" style="font-weight: normal; margin-bottom: 0px;">Is the Default Link?</label>
@@ -55,7 +55,7 @@
                 <div class="form-group">
                     <div class="checkbox-inline">
                         <label class="switch">
-                            <input class="newLinkInput check-box" data-val="true" data-val-required="The IsPublic field is required." id="SidebarLinks_{{newID}}__IsPublic" name="SidebarLinks[{{newID}}].IsPublic" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsPublic" type="hidden" value="false">
+                            <input class="newLinkInput toggler check-box" data-val="true" data-val-required="The IsPublic field is required." id="SidebarLinks_{{newID}}__IsPublic" name="SidebarLinks[{{newID}}].IsPublic" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsPublic" type="hidden" value="false">
                             <div class="slider round"></div>
                         </label>
                         <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsPublic" style="font-weight: normal; margin-bottom: 0px;">Is Link Public?</label>
@@ -66,7 +66,7 @@
                 <div class="form-group">
                     <div class="checkbox-inline">
                         <label class="switch">
-                            <input checked="checked" class="newLinkInput check-box" data-val="true" data-val-required="The IsEnabled field is required." id="SidebarLinks_{{newID}}__IsEnabled" name="SidebarLinks[{{newID}}].IsEnabled" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsEnabled" type="hidden" value="false">
+                            <input checked="checked" class="newLinkInput toggler check-box" data-val="true" data-val-required="The IsEnabled field is required." id="SidebarLinks_{{newID}}__IsEnabled" name="SidebarLinks[{{newID}}].IsEnabled" type="checkbox" value="true"><input class="newLinkInput" name="SidebarLinks[{{newID}}].IsEnabled" type="hidden" value="false">
                             <div class="slider round"></div>
                         </label>
                         <label class="newLinkInput" for="SidebarLinks_{{newID}}__IsEnabled" style="font-weight: normal; margin-bottom: 0px;">Is Link Enabled?</label>
