--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -16,7 +16,7 @@
                     <a>Splash Screen</a>
                 </h4>
             </div>
-            <div id="collapse1" class="panel-collapse collapse">
+            <div id="collapse1" class="panel-collapse collapse in">
                 <div class="panel-body">
 
                     <div class="row">
