--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
         </div>
     </div>
-    <canvas style="z-index:1;position:absolute;top:0;left:0;"></canvas>
+    <canvas id="particles" style="display:none;z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;"></canvas>
 </div>
 
 
