--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -19,7 +19,7 @@
                 <div class="chart"><div id="ramCounter" class="performancePieChart percentage" data-percent=""><div class="percent"></div></div><div class="chartlabel">RAM Usage</div></div>
             </div>
             <div class="col-sm-4">
-                @*<div id="tempCounter" class="performancePieChart" data-percent="0">0%</div>*@
+                <div id="tempCounter" class="" data-percent="0">0</div>
             </div>
         </div>
 
