--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -53,6 +53,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li id="settingsWindowButton" class="btn btn-default btn-lg" rel="popover" data-content='test test test' data-placement="top" data-original-title="Settings Menu"><i class="glyphicon glyphicon-cog"></i></li>
                     <li class="section-btn"><a href="#" data-toggle="modal" data-target="#modal-form">Sign in / Join</a></li>
                 </ul>
             </div>
