--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -64,6 +64,8 @@
 
 @RenderBody()
 
+<div id="ajaxAlertContainer"></div>
+
 <!-- SCRIPTS -->
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyBsVa2tZBcbxzQDgm8cmfaJ4MoVDB8xySg&sensor=true"></script>
 @Scripts.Render("~/bundles/jquery")
